2014-10-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Pass the full nvt path to
	plugin_launch().

2014-10-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/preferences.c (preferences_init): Dropped the return value
	because it is never used anywhere.

	* src/preferences.h: Adjust proto accordingly.

2014-10-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Removed redundant setting
	of the OID. This saves considerable amount of memory per process.

2014-10-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Dropped superfluous log lines. The log will also without this line
	provide the information about the updating. This makes the log
	cleaner to read.

	* tools/greenbone-nvt-sync (update_openvassd, update_openvasmd): Remove log
	info about start of update.

2014-10-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/sighand.c (print_trace): New function.
	(sighand_segv): Log backtrace when a process segfaults.

2014-10-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (fill_host_kb_ssh_credentials): Print debug info when
	DEBUG is defined instead of printing debug info if NDEBUG is not defined.
	This avoids noise by default.

2014-10-21  Henri Doreau <henri.doreau@gmail.com>

	* src/comm.c (send_plug_info): Replaced g_malloc0() + snprintf() by
	g_strdup_printf().

2014-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta4.

2014-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0+beta3 release.

	* CHANGES: Updated.

2014-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c: Fix include for hash_table_file for new location.

2014-10-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Free the nvti struct returned by